[tool.poetry]
name = "django-getresponse"
version = "0.2.1"
description = "A Django email backend for GetResponse"
authors = []
readme = "README.md"
packages = [
    { include = "getresponse" },
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
django = "^4.2.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
responses = "^0.23.3"
pytest-django = "^4.6.0"
flake8 = "^6.1.0"
flake8-isort = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
